elimination de header deux fois, maintenant div class header area a prise la place du mauvais header dans la ligne 3 dans le fichier header.php

--- a/styles/custom-k.css
+++ b/styles/custom-k.css
@@ -261,7 +261,7 @@ div.voiture_liste__image-wrapper {
 }
 .voiture_liste__image-wrapper img {
   border-radius: 2px;
-  object-fit: cover;
+  object-fit: contain;
 }
 .voir-plus {
   margin-bottom: 3rem;
