--- a/styles/footer.css
+++ b/styles/footer.css
@@ -8,6 +8,7 @@ footer {
   justify-content: space-between;
   padding-top: 20px;
   width: 100%;
+  margin-top: 40px;
 }
 .adresse div {
   text-align: left;
