--- a/styles/custom-k.css
+++ b/styles/custom-k.css
@@ -361,6 +361,47 @@ footer .social,
   opacity: 1;
 }
 
+.box-btnProfil {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;  
+}
+
+.Profil .btnmodifprofil {
+  background-color: #ed712b;
+  color: white;
+  cursor: pointer;
+  font-size: 1rem;
+  font-family: "Red Rose", sans-serif;
+  border-radius: 3px;
+  width: 150px;
+  max-width: 100%;
+  display: block;
+  height: 50px;
+  margin: 0;
+  
+}
+
+
+.Profil .btnsupprofil {
+  background-color: #ed712b;
+  color: white;
+  padding: 5px 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-family: "Red Rose", sans-serif;
+  border-radius: 3px;
+  max-width: 170px;
+  width: 100%;
+  height: 50px;
+  text-transform: uppercase;
+  line-height: 16px;
+  display: block;
+  margin: 0;
+  
+}
+
 /* media queries */
 
 @media screen and (max-width: 1700px) {
@@ -477,6 +518,7 @@ footer .social,
   }
 }
 
+
 @media screen and (max-width: 767px) {
   .box img {
     height: 120px;
@@ -504,6 +546,7 @@ footer .social,
     background: #120902;
     position: fixed;
     z-index: 10;
+    width:100%;
   }
 
   /* navbar css for mobile start */
