menu sur les pages

--- a/styles/gestionUtilisateurs.css
+++ b/styles/gestionUtilisateurs.css
@@ -24,9 +24,7 @@
 }
 #GestionUtilisateurs select{
   margin-left:initial;
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: 0%;
+  width:305px;
 }
 #GestionUtilisateurs a{
   text-decoration: none;
